Fixed up team page on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -387,3 +387,14 @@ tr.top td{
 h1, .h1 {
   word-wrap: break-word;
 }
+
+.team-user{
+  min-height: 100px;
+  margin-bottom: 10px;
+}
+
+.contributor{
+  float: left;
+  margin: 0 5px 5px 0;
+  height: 80px;
+}
